# Rust-Blogspot

./: .gitignore  Cargo.toml  Content.toml  Makefile.toml  Setting.toml  package-lock.json  package.json  tailwind.config.js
blogspot/: Cargo.toml
blogspot/src/: main.rs  model.rs  oauth.rs  routes.rs  setup.rs
macros/src/: lib.rs
markdown/: Cargo.toml
markdown/src/: lib.rs
pages/markdown/en/blog/: idk5.md
pages/markdown/id/project/: idk.md
pages/templates/: base.html
pages/templates/components/: footer.html  header.html
pages/templates/pages/: 404.html  blog.html  blog_list.html  intro.html  oauth.html  portofolio.html
public/: prism.css  prism.js
template/: Cargo.toml
template/src/: lib.rs
