[package]
name = "blogspot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
log.workspace = true
markdown = { version = "0.1.0", path = "../markdown" }
serde.workspace = true
simple_logger = "4.3.3"
template = { version = "0.1.0", path = "../template" }
thiserror.workspace = true
tokio.workspace = true
toml = "0.8.10"
tower-http = { version = "0.5.2", features = ["full"] }
